Implement asset status management(changing status and deletion as part of tracking) and removed side nav bar bug